--- a/mcb-test/pom.xml
+++ b/mcb-test/pom.xml
@@ -13,8 +13,14 @@
     <description>mcb-test</description>
     <properties>
         <java.version>1.8</java.version>
+        <mcb-common.version>0.0.1-SNAPSHOT</mcb-common.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>mcb-common</artifactId>
+            <version>${mcb-common.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -69,6 +75,7 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
         </dependency>
+
 
     </dependencies>
 
