--- a/mcb-test/src/main/resources/application.yml
+++ b/mcb-test/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 10097
+spring:
+  application:
+    name: mcb-test
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
