--- a/io-producer/pom.xml
+++ b/io-producer/pom.xml
@@ -5,10 +5,10 @@
 	<parent>
 		<groupId>com.example</groupId>
 		<artifactId>mcb-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1-RELEASE</version>
 	</parent>
 	<artifactId>io-producer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-RELEASE</version>
 	<name>io-producer</name>
 	<description>io-producer</description>
 	<properties>
