--- a/mcb-refactor/pom.xml
+++ b/mcb-refactor/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>com.example</groupId>
         <artifactId>mcb-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1-RELEASE</version>
     </parent>
     <artifactId>mcb-refactor</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1-RELEASE</version>
     <name>refactor</name>
     <description>refactor</description>
     <properties>
